Adding priority,task type, and edit in DialogFragment. Used SugarORM to persist date with SQLite. Few UI features implemented.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,33 +10,33 @@
     tools:context="com.codepath.simpletodo.MainActivity">
 
     <Button
+        android:id="@+id/btnAddItem"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/add"
-        android:onClick="onAddItem"
-        android:id="@+id/btnAddItem"
         android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:onClick="onAddItem"
+        android:text="@string/add" />
 
     <ListView
+        android:id="@+id/lvItems"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/lvItems"
-        android:layout_alignParentTop="true"
+        android:layout_above="@+id/btnAddItem"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_above="@+id/btnAddItem" />
+        android:layout_alignParentTop="true" />
 
     <EditText
+        android:id="@+id/etEditText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/etEditText"
-        android:hint="@string/add_item"
-        android:layout_below="@+id/lvItems"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
+        android:layout_below="@+id/lvItems"
         android:layout_toLeftOf="@+id/btnAddItem"
-        android:layout_toStartOf="@+id/btnAddItem" />
+        android:layout_toStartOf="@+id/btnAddItem"
+        android:hint="@string/add_item" />
 </RelativeLayout>
