--- a/app/src/main/res/layout/todo_item.xml
+++ b/app/src/main/res/layout/todo_item.xml
@@ -40,15 +40,17 @@
 
         <TextView
             android:id="@+id/tvDueDate"
+            android:textAppearance="?android:attr/textAppearanceSmall"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
             android:layout_alignParentTop="true"
             android:layout_gravity="right"
+            android:textColor="@color/colorPrimaryDark"
             android:padding="15dp"
             android:text="New Text"
-            android:visibility="invisible" />
+             />
 
 
     </LinearLayout>
